# rctbp_bf_training

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  LICENSE  PLAN.md  docker-compose.yml  fluence.yaml  pyproject.toml  requirements-api.txt  requirements.txt  setup_env.py
.claude/: settings.local.json
api/: __init__.py  main.py  schemas.py
bayesflow-calibration/: pyproject.toml
bayesflow-calibration/src/bayesflow_calibration/: __init__.py  approximator.py  diagnostics.py  losses.py  schedules.py
bayesflow-calibration/tests/: test_approximator.py  test_losses.py  test_schedules.py
docs/: NOTEBOOK_UPDATE_SUMMARY.md  REFACTORING_SUMMARY.md  SEARCH_SPACE_REVIEW.md  calibration_loss_addon_plan.md  docker_deployment.md  environment_setup.md  recommendations_optimization.md
examples/: ancova_basic.ipynb  ancova_calibration_loss.ipynb  ancova_optimization.ipynb  optuna_ancova.db  optuna_ancova_cont_2arms.db
scripts/: docker-entrypoint.sh
src/rctbp_bf_training/: __init__.py
src/rctbp_bf_training/core/: __init__.py  dashboard.py  infrastructure.py  objectives.py  optimization.py  results.py  threshold.py  utils.py  validation.py
src/rctbp_bf_training/models/: __init__.py
src/rctbp_bf_training/models/ancova/: __init__.py  model.py
src/rctbp_bf_training/plotting/: __init__.py  diagnostics.py
tests/: __init__.py  test_package.py
tests/test_core/: test_infrastructure.py  test_objectives.py  test_optimization.py  test_results.py  test_threshold.py  test_utils.py  test_validation.py
tests/test_models/test_ancova/: test_model.py
tests/test_plotting/: test_diagnostics.py
